commiting first change. Going through git tarining video

--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -14,7 +14,9 @@ Your browser does not support the HTML5 canvas tag.
   <h1>Controls</h1>
   <p>Use left and right arrows to move fighter.</p>
   <p>Use the spacebar to fire. - Still working on this LOL</p>
-
+<!--
+	comment to update file and commit to git. Going through git training video" 
+-->
 </body>
 </html>
 
