--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -13,10 +13,31 @@ Your browser does not support the HTML5 canvas tag.
 
   <h1>Controls</h1>
   <p>Use left and right arrows to move fighter.</p>
-  <p>Use the spacebar to fire. - Still working on this LOL</p>
-<!--
-	comment to update file and commit to git. Going through git training video" 
--->
+  <p>Use the spacebar to fire.</p>
+  <p>Aliens are 5 points.</p>
+
+</body>
+</html>
+
+
+i<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Spacer Invaders</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  
+  <canvas id="myCanvas" width="1200" height="800" style="border:1px solid #000000;">
+Your browser does not support the HTML5 canvas tag.
+</canvas>
+
+  <h1>Controls</h1>
+  <p>Use left and right arrows to move fighter.</p>
+  <p>Use the spacebar to fire.</p>
+  <p>Aliens are 5 points.</p>
+
 </body>
 </html>
 
