updating html page fixing html copy and paste from codepen

--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -1,26 +1,4 @@
-i<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<title>Spacer Invaders</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  
-  <canvas id="myCanvas" width="1200" height="800" style="border:1px solid #000000;">
-Your browser does not support the HTML5 canvas tag.
-</canvas>
-
-  <h1>Controls</h1>
-  <p>Use left and right arrows to move fighter.</p>
-  <p>Use the spacebar to fire.</p>
-  <p>Aliens are 5 points.</p>
-
-</body>
-</html>
-
-
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
