indentation and code cleanup

--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -15,7 +15,7 @@ Your browser does not support the HTML5 canvas tag.
   <p>Use left and right arrows to move fighter.</p>
   <p>Use the spacebar to fire.</p>
   <p>Aliens are 5 points.</p>
-
+  <script src="code.js"></script>
 </body>
 </html>
 
