--- a/space_invaders/index.html
+++ b/space_invaders/index.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 <title>Spacer Invaders</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" 
+      type="image/icon" 
+      href="favicon.ico">
 </head>
 <body>
   
